# nes_emu_rust

./: .gitignore  Cargo.toml  README.md  makefile.toml
.github/workflows/: clippy.yml  security-audit.yml
src/: cartridge.rs  config.yaml  cpu.rs  lib.rs  main.rs  nes_emulator.rs
src/apu/: mod.rs
src/bus/: controller.rs  interrupt.rs  memory.rs  mod.rs
src/cartridge/: mapper.rs  mapper0.rs  mod.rs
src/components/: mod.rs
src/cpu/: instructions.rs  mod.rs  opcodes.rs
src/memory/: mod.rs
src/nes_emulator/: clock.rs  mod.rs
src/ppu/: mod.rs  screen.rs
src/tui/: channel_mgt.rs  mod.rs
tests/: clock.rs  cpu.rs
