[package]
name = "nes_emu_rust"
version = "0.1.0"
authors = ["leirn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.35.1"
phf = { version = "0.10.1", features = ["macros"] }
yaml-rust = "0.4"
argparse = "0.2.2"

[profile.dev]
overflow-checks = false